--- a/index.css
+++ b/index.css
@@ -44,7 +44,13 @@ p{
     margin-bottom: 51px;
 }
 
-#pw-generator-btn{
+.button-container{
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+button{
     padding: 9px 16px;
     font-family: 'Inter', sans-serif;
     font-size: 16px;
@@ -56,7 +62,19 @@ p{
     color: #ffffff;
     border-radius: 6px;
     text-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
+    transition: all 200ms ease-out;
 }
+
+button:hover{
+    border: 1px solid #10B981;
+}
+
+#reset-password-btn{
+    color: #10B981;
+    background: none;
+    border: 1px solid #10B981;
+}
+
 
 .line{
     border-top: 1px solid #2F3E53;
